--- a/components/media/media.html
+++ b/components/media/media.html
@@ -19,7 +19,7 @@
                 <th></th>
             </tr>
         </thead>
-        <tr ng-repeat="file in vm.files | filter:fileFilter | orderBy:predicate:reverse">
+        <tr ng-repeat="file in vm.files | filter:fileFilter | orderBy:predicate:reverse track by file.id">
             <td>
                 <a ng-href="{{ file.link }}" target="_blank" ng-bind-html="file._preview"></a>
             </td>
