--- a/components/page/pages.html
+++ b/components/page/pages.html
@@ -39,7 +39,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="page in vm.pages | filter:pageFilter | orderBy:predicate:reverse">
+        <tr ng-repeat="page in vm.pages | filter:pageFilter | orderBy:predicate:reverse track by page.id">
             <td><a ng-href="pages/page/{{page.id}}">{{page.title}}</a></td>
             <td>{{ page.category.name }}</td>
             <td>{{ page.language.name }}</td>
