--- a/components/user/users.html
+++ b/components/user/users.html
@@ -20,7 +20,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="user in vm.users | filter:userFilter | orderBy:predicate:reverse">
+        <tr ng-repeat="user in vm.users | filter:userFilter | orderBy:predicate:reverse track by user.id">
             <td><a ng-href="users/user/{{user.id}}">{{user.user_name}}</a></td>
             <td>{{ user.first_name }}</td>
             <td>{{ user.last_name }}</td>
