--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,20 @@ td {
     height: 500px;
 }
 
+/* ==========================================================================
+   Login Overlay
+   ========================================================================== */
+
+#login-container {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    background: rgba(255, 255, 255, 0.75);
+}
+
 
 /* ==========================================================================
    Progress Bar
