Fix url to dashboard

--- a/components/navigation/navigation.html
+++ b/components/navigation/navigation.html
@@ -3,7 +3,7 @@
         <current-site></current-site>
     </div>
     <ul>
-        <a href="/cms/dashboard">
+        <a href="dashboard">
             <li class="lightyellow-border">
                 <div class="nav-icon">
                     <i class="icon-box fa fa-tachometer"></i>
