--- a/components/status-bar/statusBar.html
+++ b/components/status-bar/statusBar.html
@@ -1,4 +1,5 @@
 <ul class="status-bar">
+    <li ng-if="statusIsLoading"><img height="15" alt="loading" src="img/loading.gif"></li>
     <li><i class="fa fa-user"></i> Raphael</li>
     <li><i class="fa fa-calendar"></i> 27. 08. 2015</li>
     <li><logout></logout></li>
