--- a/components/event/event.html
+++ b/components/event/event.html
@@ -22,6 +22,8 @@
                 <dd>{{ vm.event.author.user_name }}</dd>
                 <dt>Last edited</dt>
                 <dd>{{ vm.event.last_edit_date | date:"dd.MM.yyyy' @' HH:mm" }}</dd>
+                <dt>URL</dt>
+                <dd>{{ vm.event.url_name }}</dd>
                 <dt>Start time</dt>
                 <dd><input ng-model="vm.start_date" id="rome-calendar-start" class="input" placeholder="dd.MM.YYYY HH:mm" tabindex="3" required></dd>
                 <dt>End time</dt>
