Add website_description and website_keywords to settings

--- a/components/setting/setting.html
+++ b/components/setting/setting.html
@@ -19,7 +19,11 @@
                 <dd><input type="text" id="website-reply-to-email" ng-model="vm.settings.website_reply_to_email.value"></dd>
                 <dt><label for="website-url">Website URL</label></dt>
                 <dd><input type="text" id="website-url" ng-model="vm.settings.website_url.value"></dd>
-                <dt><label for="website-debug-mode">Debug Mode</label></dt>
+                <dt><label for="website-description">Website URL</label></dt>
+                <dd><input type="text" id="website-description" ng-model="vm.settings.website_description.value"></dd>
+                <dt><label for="website-description">Website Description</label></dt>
+                <dt><label for="website-keywords">Website Keywords</label></dt>
+                <dd><input type="text" id="website-keywords" ng-model="vm.settings.website_keywords.value"></dd>
                 <dd><input type="checkbox" id="website-debug-mode" ng-model="vm.settings.debug_mode.value" ng-true-value="'1'" ng-false-value="'0'"></dd>
             </dl>
 
