--- a/components/article/article.html
+++ b/components/article/article.html
@@ -8,7 +8,7 @@
         <h1>
             <i class="fa fa-file-text-o"></i> <page-name></page-name>
         </h1>
-        <input type="text" ng-model="vm.article.title" value="{{ vm.article.title }}" placeholder="Title" tabindex="1" required>
+        <input id="article-title" type="text" ng-model="vm.article.title" value="{{ vm.article.title }}" placeholder="Title" tabindex="1" required>
         <ui-codemirror ui-codemirror-opts="vm.editorOptions" ng-model="vm.article.content"></ui-codemirror>
     </article>
 
