--- a/components/event/event.html
+++ b/components/event/event.html
@@ -8,7 +8,7 @@
         <h1>
             <i class="fa fa-file-text-o"></i> <page-name></page-name>
         </h1>
-        <input type="text" ng-model="vm.event.name" value="{{ vm.event.name }}"  placeholder="Title" tabindex="1" required>
+        <input id="event-title" type="text" ng-model="vm.event.name" value="{{ vm.event.name }}" placeholder="Title" tabindex="1" required>
         <textarea ckeditor ng-model="vm.event.description" value="{{ vm.event.description }}" tabindex="2">{{ vm.event.description }}</textarea>
     </article>
 
