--- a/components/page/page.html
+++ b/components/page/page.html
@@ -8,7 +8,7 @@
         <h1>
             <i class="fa fa-file-text-o"></i> <page-name></page-name>
         </h1>
-        <input type="text" ng-model="vm.page.title" value="{{ vm.page.title }}" placeholder="Title" tabindex="1" required>
+        <input id="page-title" type="text" ng-model="vm.page.title" value="{{ vm.page.title }}" placeholder="Title" tabindex="1" required>
 
         <p class="width-100 text-center">Select articles to add to this page</p>
         <div class="table width-100">
